# hazbapi

./: .Cargo.toml.un~  .gitignore  Cargo.toml  Cargo.toml~  LICENSE  README.md
src/: ..env.un~  .app.rs.un~  .conn.rs.un~  .init.rs.un~  .main.rs.un~  10  app.rs  app.rs~  conn.rs  conn.rs~  main.rs
src/routes/: .characters.rs.un~  .mod.rs.un~  characters.rs  characters.rs~  mod.rs  species.rs  weapons.rs
